created new endpoint to return code details for a given lpa and actor id
